# kalman_filter_applied

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/: 1611768525.bag
data/datasets/: 1611836926.bag
include/: simulate.h  simulation.h
include/core/: CoreManager.h  KalmanFilter.h
include/filter/: FilterManager.h  KalmanFilter.h
include/simulation/: SimManager.h  StateManager.h  simulation.h
include/simulator/: SimManager.h  StatePropagator.h
include/state/: State.h
include/types/: Pose.h  Type.h  Vec.h
include/utils/: ParamsManager.h  colors.h  types.h
latex/: exercise.aux  exercise.tex
launch/: kf_applied.launch  kfa.launch  simulation.launch
rviz/: kf_applied.rviz  kfa.rviz  simulation.rviz  simulator.rviz
scripts/: clang_format.sh  clang_tidy.sh
src/: kf_applied_node.cpp  kfa_node.cpp  simulate.cpp  simulation.cpp  simulation_node.cpp  simulator_node.cpp
src/core/: CoreManager.cpp  KalmanFilter.cpp
src/filter/: FilterManager.cpp  KalmanFilter.cpp
src/simulation/: SimManager.cpp  StateManager.cpp  simulation.cpp
src/simulator/: SimManager.cpp  StatePropagator.cpp
src/utils/: ParamsManager.cpp
