<?xml version="1.0"?>
<package format="2">
  <name>kf_applied</name>
  <version>0.0.0</version>
  <description>The Kalman Filter applied to symulated enviornments.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alericcardi1996@gmail.com">Alessandro Riccardi</maintainer>
  <license>BSD</license>
  <author email="alericcardi1996@gmail.com">Alessandro Riccardi</author>
 

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>roslint</build_depend>
</package>
