<?xml version="1.0"?>
<package format="2">
  <name>kfa</name>
  <version>0.0.1</version>
  <license>MIT</license>
  <description>The Kalman Filter applied to symulated enviornments.</description>

  <author email="alericcardi1996@gmail.com">Alessandro Riccardi</author>
  <maintainer email="alericcardi1996@gmail.com">Alessandro Riccardi</maintainer>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>

  <build_depend>roslint</build_depend>
</package>
